--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main>
         <div class="video-container" id="video-container">
-            <img src="/img/modelo7.jpg" alt="">
+            <img src="img/modelo7.jpg" alt="">
             <div class="controls">
                 <div class="profile-icon">
                     <img src="https://www.w3schools.com/w3images/avatar2.png" alt="Profile Image">
