--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CandyPack</title>
+    <title>CandyPacks</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -37,7 +37,7 @@
             </div>
             <div class="sidebar">
                 <h3>@CandyUser</h3>
-                <p>#CandyPack #Viral #Trendy</p>
+                <p>#CandyPacks #Viral #Trendy</p>
             </div>
         </div>
     </main>
