--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 
     <main>
         <div class="video-container" id="video-container">
+            <div class="video-header">
+                <span class="tab active">Para você</span>
+                <span class="tab">Seguindo</span>
+            </div>
             <img src="img/modelo7.jpg" alt="">
             <div class="controls">
                 <div class="profile-icon">
@@ -41,7 +45,7 @@
             </div>
         </div>
     </main>
-
+    
     <div class="footer-nav">
         <ion-icon name="home"></ion-icon>
         <ion-icon name="search-outline"></ion-icon>
