--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="logo">CandyPacks</div>
         <div class="menu">
-            <ion-icon name="home-outline"></ion-icon>
+            <ion-icon name="home"></ion-icon>
             <ion-icon name="search-outline"></ion-icon>
             <ion-icon name="add-circle-outline"></ion-icon>
             <ion-icon name="chatbox-ellipses-outline"></ion-icon>
