--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </div>
     </header>
 
-    <main>
+    <main>  
+        <div class="video-header">
+            <div class="tab active">Para Você</div>
+            <div class="tab">Seguindo</div>
+        </div>        
         <div class="video-container" id="video-container">
-            <div class="video-header">
-                <span class="tab active">Para você</span>
-                <span class="tab">Seguindo</span>
-            </div>
             <img src="img/modelo3.PNG" alt="">
             <div class="controls">
                 <div class="profile-icon">
