--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <ion-icon name="heart" id="heart-icon-video"></ion-icon>
                 <span class="likes-count" id="likes-video">113k</span>
-                <ion-icon name="arrow-undo"></ion-icon>
+                <ion-icon name="arrow-redo" id="share-icon"></ion-icon>
                 <span class="likes-count" id="likes-video">28k</span>
             </div>
             <div class="sidebar">
