--- a/index.html
+++ b/index.html
@@ -63,14 +63,17 @@
         </div>
       </div>
           
-    <div class="footer-nav">
+      <div class="footer-nav">
         <ion-icon name="home"></ion-icon>
         <ion-icon name="search-outline"></ion-icon>
         <ion-icon name="add-circle-outline"></ion-icon>
-        <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+        <div class="icon-wrapper">
+            <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+            <span class="notification-badge">1</span>
+        </div>
         <ion-icon name="person-outline"></ion-icon>
     </div>
-    <script src="js/script.js"></script>
+        <script src="js/script.js"></script>
 </body>
 
 </html>
